add inds_getInscriptionsStats api
